# ArcTerm

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  LICENSE-BRAND.md  NOTICE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: ai-panel.ts  ai.ts  arcterm-commands.ts  completion-overlay.ts  history-overlay.ts  index.html  input-editor.ts  main.ts  session-manager.ts  settings-panel.ts  sidebar.ts  terminal.ts  welcome.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/completion-specs/: bundle.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: completion.rs  history.rs  ipc.rs  ipc_guard.rs  lib.rs  main.rs  pty.rs  settings.rs  shell_hooks.rs
apps/desktop/src-tauri/src/ai/: auto.rs  claude.rs  context.rs  local_llama.rs  mod.rs  router.rs
apps/desktop/src-tauri/src/completion/: fs.rs  mod.rs  specs.rs
apps/desktop/src-tauri/src/models/: downloader.rs  mod.rs
apps/desktop/src/styles/: ai-panel.css  completion-overlay.css  history-overlay.css  input-editor.css  main.css  settings-panel.css  sidebar.css
scripts/: import-fig-specs.mjs  package-lock.json  package.json
shell-integration/: arcterm.bash  arcterm.fish  arcterm.zsh
shell-integration/zdotdir/: .zlogin  .zprofile  .zshenv  .zshrc
