[package]
name = "arcterm-desktop"
version = "0.1.0"
description = "ArcTerm desktop app — Tauri v2 shell"
authors = ["ArcTerm contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "arcterm_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
# SECURITY (H-4): tauri-plugin-shell intentionally NOT a dependency.
# See lib.rs near the `tauri::Builder::default()` for rationale.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY: portable-pty handles fork+exec on Unix and ConPTY on Windows.
portable-pty = "0.8"

# Base64 for binary-safe pty->frontend transport. xterm-side decodes back to
# Uint8Array so we never lose bytes mid-UTF-8-sequence.
base64 = "0.22"

# Concurrency primitives. Reader threads are blocking (portable-pty exposes
# std::io::Read); we wrap children + writers in a Mutex for IPC access.
parking_lot = "0.12"

# UUIDs identify PTY instances. Phase 4 (sessions/tabs) reuses the same id.
uuid = { version = "1", features = ["v4"] }

# Logging. tauri's plugin-log is overkill for Phase 1; env_logger keeps it
# trivial and prints to the dev terminal.
log = "0.4"
env_logger = "0.11"

# SQLite for command history. `bundled` builds sqlite from source so we
# don't depend on the system library version (and we get the same feature
# flags on every developer's machine).
rusqlite = { version = "0.32", features = ["bundled"] }

# Tokio: the `claude` CLI is invoked via tokio::process so stream-json
# output can be piped line-by-line without blocking the Tauri event loop.
# "process" + "io-util" + "macros" is the minimum feature set we need;
# "rt-multi-thread" comes along for tokio::spawn inside the subprocess
# reader task.
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
futures = "0.3"

# Local inference. The "metal" feature compiles Metal shaders during the
# cargo build; it's auto-selected for aarch64-apple-darwin but we spell it
# out here so future changes to the crate's default features can't silently
# disable GPU acceleration.
llama-cpp-2 = { version = "0.1", features = ["metal"] }

# Model downloader. rustls-tls avoids depending on the system OpenSSL
# install (homebrew/system LibreSSL mismatch is a real pain); "stream"
# lets us show download progress without buffering the whole file in RAM.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "http2"] }

# SHA-256 verification for downloaded model files. We publish expected
# hashes alongside the model registry so a corrupted or tampered download
# can't silently get loaded into the inference engine.
sha2 = "0.10"

# encoding_rs: llama-cpp-2's modern `token_to_piece` detokenizer takes
# an &mut Decoder so multi-byte UTF-8 sequences that split across tokens
# (common with non-ASCII output) come out correctly. This is the same
# decoder crate used in the llama-cpp-2 simple example.
encoding_rs = "0.8"

# Used for O_NOFOLLOW / O_CLOEXEC flags when opening paths under
# ~/.arcterm/ that a same-uid attacker could have replaced with a
# symlink between our metadata check and our open. Already a
# transitive dep (via rustls + reqwest); we name it here to use it
# directly from our own code.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Tauri v2 expects a `custom-protocol` feature flag for the production build.
custom-protocol = ["tauri/custom-protocol"]

# Optimize hot crates even in `--debug` builds so local iteration
# (`pnpm tauri build --debug`, `pnpm tauri dev`) doesn't cripple the
# paths users spend most time waiting on:
#
# - `sha2`: boot-critical. The Wave 2.5 verify re-hashes up to 8 GB of
#   GGUF. In debug mode the crate compiles without its SIMD + ASM
#   paths, dropping throughput by 5-10×. A 5-min verify in debug
#   becomes ~30 s with this override.
# - `llama-cpp-sys-2`: inference hot path. Unoptimized C++ is
#   unacceptably slow for any real test of local-model behavior.
# - `encoding_rs`: token detokenization loop — same story, just less
#   extreme.
# - `reqwest`/`rustls`/`ring`: TLS during model download. Unoptimized
#   ring turns a 3-minute model pull into 10+ minutes.
#
# Our own code stays at default opt-level so edit-compile loops stay
# fast. Release builds were already opt-level=3 everywhere.
[profile.dev.package.sha2]
opt-level = 3
[profile.dev.package.encoding_rs]
opt-level = 3
[profile.dev.package."llama-cpp-sys-2"]
opt-level = 3
[profile.dev.package.reqwest]
opt-level = 3
[profile.dev.package.rustls]
opt-level = 3
[profile.dev.package.ring]
opt-level = 3
